# world_countries_database_web_viewer

./: Cargo.toml  README.md  Rocket.toml  set_env.sh
js/: jsgrid_helper.js
src/: auth.rs  core.rs  database.rs  database_operations.rs  database_oracle.rs  error.rs  main.rs  read_insert_update_delete.rs  schema.rs
templates/: base.tera  cities.tera  continents.tera  countries.tera  districts.tera  home.tera  login.tera  regions.tera
