[package]
name = "kursach"
version = "0.1.0"
authors = ["LokiVKlokeNaAndoke <ma.ba1@rambler.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
r2d2-oracle = "0.2.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["tera_templates", "databases"]