[package]
name = "kursach"
version = "0.1.0"
authors = ["LokiVKlokeNaAndoke <ma.ba1@rambler.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version="0.4.2",features=["private-cookies"]}
r2d2-oracle = {git="https://github.com/LokiVKlokeNaAndoke/r2d2-oracle", features=["chrono"]}
serde = { version = "1.0.104", features = ["derive"] }
itertools = "0.8.2"
lazy_static = "1.4.0"
chrono = { version = "0.4.10", features = ["serde"] }
smart-default = "0.6.0"
log = "0.4.8"
fern = "0.5.9"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["tera_templates", "databases", "serve", "json"]